Added mongoose to dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
+    "mongoose": "^5.12.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.1",
